--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,18 +14,18 @@ nav {
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 10px;
+  margin: 1% 5%;
 }
 nav a {
   text-decoration: none;
   color: var(--accent-text-color);
-}
-#pre-quiz,
-#quiz {
+
+}.container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content:center;
-  margin: 0 20%;
+  margin: 0 30%;
 }
 
 #instructions {
@@ -55,9 +55,24 @@ h1 {
 .button {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  border-radius: 5px;
+  /* margin: 20px 0;
+  padding: 5px 10px; */
   background: var(--button-background);
   color: white;
+}
+.button:hover {
+  background-color: var(--accent-text-color);
+}
+
+#question-buttons-container {
+  display: inline-block;
+  
+}
+
+#question-buttons {
+  display: flex;
+  flex-direction: column;
 }
 
 /* .hide {
