--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 :root {
   --button-background: #560bad;
-  --accent-text-color: #f72585;
+  --hover-text-color: #f72585;
   --answer-text-color: #adb5bd;
+  --accent-text-color: #B10DC9;
 }
 
 * {
@@ -20,12 +21,14 @@ nav a {
   text-decoration: none;
   color: var(--accent-text-color);
 
-}.container {
+}
+
+.container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content:center;
-  margin: 0 30%;
+  margin: 0 20%;
 }
 
 #instructions {
@@ -38,8 +41,14 @@ p {
   text-align: center;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   padding: 10px 20px;
+}
+h3 {
+  font-style: italic;
+  color: var(--answer-text-color);
 }
 
 #answer-wrapper {
@@ -54,27 +63,43 @@ h1 {
 
 .button {
   display: flex;
-  justify-content: center;
   border-radius: 5px;
-  /* margin: 20px 0;
-  padding: 5px 10px; */
   background: var(--button-background);
   color: white;
 }
+
+#standard-button {
+  justify-content: center;
+  margin: 20px 0;
+  padding: 5px 10px;
+}
 .button:hover {
-  background-color: var(--accent-text-color);
+  background-color: var(--hover-text-color);
 }
 
 #question-buttons-container {
   display: inline-block;
+  margin-left: 20px;;
   
 }
 
 #question-buttons {
   display: flex;
   flex-direction: column;
+  text-align: left;
+  gap: 5px;
+  padding-bottom: 15%
 }
 
+#question-buttons button {
+  text-align: left;
+}
+
+#wrong-answer, 
+#correct-answer {
+  border-top: solid 2px var(--answer-text-color);
+  width: 100%;
+}
 /* .hide {
   display: none;
 } */
