--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,6 @@ nav a {
 .container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content:center;
   margin: 0 20%;
 }
@@ -35,9 +34,6 @@ nav a {
   display: flex;
   justify-content: center;
   margin: 0 10%;
-}
-
-p {
   text-align: center;
 }
 
@@ -51,18 +47,11 @@ h3 {
   color: var(--answer-text-color);
 }
 
-#answer-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-} 
-
 #countdown {
   margin-right: 20px;
 }
 
 .button {
-  display: flex;
   border-radius: 5px;
   background: var(--button-background);
   color: white;
@@ -75,12 +64,12 @@ h3 {
 }
 .button:hover {
   background-color: var(--hover-text-color);
+  cursor: pointer;
 }
 
 #question-buttons-container {
   display: inline-block;
   margin-left: 20px;;
-  
 }
 
 #question-buttons {
@@ -95,12 +84,43 @@ h3 {
   text-align: left;
 }
 
+#final-score {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+  margin: 2% 10%;
+}
+
+#final-score > *{
+  text-align: left;
+  width: 100%;
+}
+
+#final-score h2, p {
+  padding: 0;
+  margin: 5px 0;
+}
+
 #wrong-answer, 
 #correct-answer {
   border-top: solid 2px var(--answer-text-color);
   width: 100%;
 }
+
+#high-scores {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+  margin: 2% 10%;
+}
+#high-score-button-container {
+  margin-top: 5%;
+  padding-bottom: 10px;
+  row-gap: 50px;
+}
+#high-scores input {
+  width: 100%;
+}
 /* .hide {
   display: none;
 } */
-
