--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,11 @@ h3 {
   padding-bottom: 10px;
   row-gap: 50px;
 }
-#high-scores input {
+#score-list {
+  border: solid ;
+}
+#high-scores h2,
+ol {
   width: 100%;
 }
 .hide {
