--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h3 {
   color: white;
 }
 
-#standard-button {
+.standard-button {
   justify-content: center;
   margin: 20px 0;
   padding: 5px 10px;
