--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,14 @@ nav a {
   margin: 0 10%;
   text-align: center;
 }
+h1 {
+  text-align: center;
+}
 
 h1,
 h2,
 h3 {
-  padding: 10px 20px;
+  padding: .5rem 1rem;
 }
 h3 {
   font-style: italic;
@@ -124,6 +127,9 @@ h3 {
 #high-scores h2,
 ol {
   width: 100%;
+}
+ol {
+  background-color: lightgray;
 }
 .hide {
   display: none !important;
