--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,8 @@
   --button-background: #560bad;
   --hover-text-color: #f72585;
   --answer-text-color: #adb5bd;
-  --accent-text-color: #B10DC9;
+  --accent-text-color: #b10dc9;
 }
-
-/* * {
-  outline: 1px solid red;
-  box-sizing: border-box;
-} */
 
 nav {
   display: flex;
@@ -20,13 +15,12 @@ nav {
 nav a {
   text-decoration: none;
   color: var(--accent-text-color);
-
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: center;
   margin: 0 20%;
 }
 
@@ -43,7 +37,7 @@ h1 {
 h1,
 h2,
 h3 {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 h3 {
   font-style: italic;
@@ -72,7 +66,7 @@ h3 {
 
 #question-buttons-container {
   display: inline-block;
-  margin-left: 20px;;
+  margin-left: 20px;
 }
 
 #question-buttons {
@@ -80,7 +74,7 @@ h3 {
   flex-direction: column;
   text-align: left;
   gap: 5px;
-  padding-bottom: 15%
+  padding-bottom: 15%;
 }
 
 #question-buttons button {
@@ -94,17 +88,18 @@ h3 {
   margin: 2% 10%;
 }
 
-#final-score > *{
+#final-score > * {
   text-align: left;
   width: 100%;
 }
 
-#final-score h2, p {
+#final-score h2,
+p {
   padding: 0;
   margin: 5px 0;
 }
 
-#wrong-answer, 
+#wrong-answer,
 #correct-answer {
   border-top: solid 2px var(--answer-text-color);
   width: 100%;
@@ -122,7 +117,7 @@ h3 {
   row-gap: 50px;
 }
 #score-list {
-  border: solid ;
+  border: solid;
 }
 #high-scores h2,
 ol {
