--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,9 @@ ol {
 .hide {
   display: none !important;
 }
+
+@media(hover: hover) {
+  #btn:hover {
+      background-color: var(--hover-text-color);
+  }
+}
