added note to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ ol {
   display: none !important;
 }
 
+/* remove hover state from mobile */
 @media(hover: hover) {
   #btn:hover {
       background-color: var(--hover-text-color);
