fixed mobile hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ ol {
 
 /* remove hover state from mobile */
 @media(hover: hover) {
-  #btn:hover {
+  .button:hover {
       background-color: var(--hover-text-color);
   }
 }
